maven profiles added    *dev profile: application-dev.properties        -includes            *local postgreSQL conncetion string            *dll-auto configuration to create tables from Java classes     *production profile: application-production.properties not published

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+## default connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
 
+## active profile -- dev or production
+spring.profiles.active=dev
+
+spring.jpa.open-in-view=true
