member id length proterty and its metadata added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,12 @@
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
+## configuring dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
 ## active profile -- dev or production
 spring.profiles.active=dev
 
 spring.jpa.open-in-view=true
+
+library.member.id.length=10
