--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/library-management    
+spring.datasource.url=jdbc:postgresql://localhost:5432/library-management?currentSchema=dev
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
 spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
