--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 ## active profile -- dev or production
 spring.profiles.active=dev
 
+spring.datasource.initialization-mode=always
+
 spring.jpa.open-in-view=true
 
 library.member.id.length=10
