--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,6 +1,6 @@
 ## PostgreSQL
-spring.datasource.url=${DB_JDBC_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
