persistent session by tomcat deactivated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,6 @@ spring.datasource.initialization-mode=always
 
 spring.jpa.open-in-view=true
 
+server.servlet.session.persistent=false
+
 library.member.id.length=10
